# kymatax

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/examples/batched_time_integration/: calculate_orbits.py  detect_orbits.py  integrate_until_convergence.py  plot_orbits.py
docs/examples/batched_time_integration/wip/: ode_attractor_matching.py
docs/examples/single_time_integration/: integrate_until_convergence_single.py
docs/examples/time_integration/: README.md  detect_attractors.py  detect_orbits.py  integrate_until_convergence.py  ode_attractor_clustering.py  ode_attractor_matching.py  ode_run_sim.py
docs/examples/time_integration/data/: attractors.parquet  sim_orbit.parquet  simulations.parquet
docs/examples/time_integration/wip/: ode_attractor_clustering.py  ode_structure_orbit_plot.py  ode_structure_plot.py
src/kinamax/: __init__.py  core.py  problems.py
src/kymatax/: __init__.py  core.py
tests/: test_version.py
